# detectit

./: CMakeLists.txt  DetectionConfig.h  DetectionPipeline.cpp  DetectionPipeline.h  LICENSE  MainWindow.cpp  MainWindow.h  README.md  main.cpp
